--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,7 +1,7 @@
 FROM gradle:7 AS base
 CMD [ "bash" ]
 
-# Build
+# Test and build
 FROM base AS test-and-build
 COPY . ./workspace
 WORKDIR /workspace
