--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     branches: ["main"]
 
 env:
-  AWS_REGION: us-west-2
+  AWS_REGION: ap-northeast-1
   ECS_SERVICE: docker-cicd-service
   ECS_CLUSTER: docker-cicd-cluster2
   ECS_TASK_DEFINITION: .aws/task-definition.json
